<resources>
    <string name="app_name">Абитуриент ГГТУ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_login">Authorization</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="fais_link"><a href="https://fais.gstu.by/">Факультет автоматизированных информационных систем </a></string>
    <string name="mtf_link"><a href="https://mtf.gstu.by/">Механико-технологический факультет </a></string>
    <string name="msf_link"><a href="https://msf.gstu.by/">Машиностроительный факультет </a></string>
    <string name="gef_link"><a href="https://gef.gstu.by/">Гуманитарно-экономический факультет </a></string>

    <string name="ef_link"><a href="https://ef.gstu.by/">Энергетический факультет </a></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>