<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/faisTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:ems="10"
            android:text="@string/fais_link"
            app:layout_constraintTop_toTopOf="parent" />

        <ListView
            android:id="@+id/faisListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/faisTextView"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="103dp" />
        <TextView
            android:id="@+id/gefTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:ems="10"
            android:text="@string/gef_link"
            app:layout_constraintTop_toBottomOf="@id/faisListView" />
        <ListView
            android:id="@+id/gefListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/gefTextView"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="103dp" />

        <TextView
            android:id="@+id/mtfTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:ems="10"
            android:text="@string/mtf_link"

            app:layout_constraintTop_toBottomOf="@id/gefListView" />

        <ListView
            android:id="@+id/mtfListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/mtfTextView"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="103dp" />

        <TextView
            android:id="@+id/msfTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:ems="10"
            android:text="@string/msf_link"
            app:layout_constraintTop_toBottomOf="@id/mtfListView" />
        <ListView
            android:id="@+id/msfListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/msfTextView"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="103dp" />

        <TextView
            android:id="@+id/efTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:ems="10"
            android:text="@string/ef_link"
            app:layout_constraintTop_toBottomOf="@id/msfListView" />
        <ListView
            android:id="@+id/efListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@+id/efTextView"
            android:layout_marginTop="10dp"
            tools:layout_editor_absoluteX="3dp"
            tools:layout_editor_absoluteY="103dp" />
        <Button
            android:id="@+id/backBtn"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="138dp"
            android:onClick="onBackBtnClick"
            android:text="Назад"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/efListView"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>